--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "globals": "^16.4.0",
     "tailwindcss": "^4.1.14",
     "vite": "^7.1.7"
-  }
+  },
+  "dependencies": {
+  "react": "^18.3.1",
+  "react-dom": "^18.3.1",
+  "react-helmet-async": "^2.0.5"
+}
 }
