--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bharat-yagya",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,23 +9,22 @@
     "preview": "vite preview",
     "vercel-build": "npm install --legacy-peer-deps && vite build"
   },
-  "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@tailwindcss/vite": "^4.1.14",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.4",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
-    "tailwindcss": "^4.1.14",
-    "vite": "^7.1.7"
-  },
   "dependencies": {
-  "react": "^18.3.1",
-  "react-dom": "^18.3.1",
-  "react-helmet-async": "^2.0.5"
-}
-
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5"
+  },
+  "devDependencies": {
+    "@eslint/js": "9.36.0",
+    "@tailwindcss/vite": "4.1.14",
+    "@types/react": "18.3.10",
+    "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "5.0.4",
+    "eslint": "9.36.0",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-react-refresh": "0.4.22",
+    "globals": "16.4.0",
+    "tailwindcss": "3.4.14",
+    "vite": "^7.1.9"
+  }
 }
