--- a/package.json
+++ b/package.json
@@ -10,21 +10,23 @@
     "vercel-build": "npm install --legacy-peer-deps && vite build"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5"
   },
   "devDependencies": {
     "@eslint/js": "9.36.0",
-    "@tailwindcss/vite": "4.1.14",
     "@types/react": "18.3.10",
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react": "5.0.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "9.36.0",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.22",
     "globals": "16.4.0",
-    "tailwindcss": "3.4.14",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.0.0",
     "vite": "^7.1.9"
   }
 }
