--- a/package.json
+++ b/package.json
@@ -13,20 +13,13 @@
     "@tailwindcss/vite": "^4.1.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-helmet-async": "^2.0.5"
+    "react-helmet-async": "^2.0.5",
+    "tailwindcss": "^3.4.13",
+    "vite": "^5.4.10"
   },
   "devDependencies": {
-    "@eslint/js": "9.36.0",
-    "@types/react": "18.3.10",
-    "@types/react-dom": "18.3.0",
-    "@vitejs/plugin-react": "5.0.4",
+    "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
-    "eslint": "9.36.0",
-    "eslint-plugin-react-hooks": "5.2.0",
-    "eslint-plugin-react-refresh": "0.4.22",
-    "globals": "16.4.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14",
-    "vite": "^7.1.9"
+    "postcss": "^8.5.6"
   }
 }
